@@ -1,3 +1,11 @@
+2013-03-09  Corinna Vinschen  <vinschen@redhat.com>
+
+	* lmaccess.h (SERVICE_ACCOUNT_FLAG_LINK_TO_HOST_ONLY): Define.
+	(NetAddServiceAccount): Add prototype.
+	(NetRemoveServiceAccount): Ditto.
+	(NetIsServiceAccount): Ditto.
+	(NetEnumerateServiceAccounts): Ditto.
+
 2013-02-19  Kai Tietz  <ktietz@redhat.com>
 
 	* msidefs.h: Add enumerators additions for _WIN32_MSI 400, and 450.
